# primodality-generator

./: .gitattributes  Cargo.toml  README.md  TODO.md
.github/workflows/: ci.yml  rust.yml
builds/: polyprimodality_generator-x86_64-unknown-linux-musl-0.8  primodality_generator-linux-1.1
src/: lib.rs  main.rs
