[package]
name = "primodality_generator"
version = "1.1.0"
authors = ["thenorili <norilinoriginal@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
primapalooza = "~0.3.4"
num-rational = "~0.2.3"
clap = {version = "~2.27.0"}
thiserror = "~1.0"
